@@ -15,9 +15,13 @@ foreach $i (@ARGV) {
     }
 }
 
+my $iorbase = "server.ior";
+my $server_iorfile = $server->LocalFile ($iorbase);
+$server->DeleteFile($iorbase);
+
 my $server = PerlACE::TestTarget::create_target (1) || die "Create target 1 failed\n";
 
-$SV = $server->CreateProcess ("client", "-ORBdebuglevel $debug_level");
+$SV = $server->CreateProcess ("client", "-ORBdebuglevel $debug_level -k $server_iorfile");
 
 $test = $SV->SpawnWaitKill ($server->ProcessStartWaitInterval());
 
@@ -25,5 +29,7 @@ if ($test != 0) {
     print STDERR "ERROR: test returned $test\n";
     exit 1;
 }
+
+$server->DeleteFile($iorbase);
 
 exit 0;
